--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -4,8 +4,8 @@
         <shape>
             <gradient
                 android:angle="90"
-                android:endColor="#87CEEB"
-                android:centerColor="#768087"
+                android:endColor="#003003"
+                android:centerColor="#003"
                 android:startColor="#003"
                 android:type="linear" />
         </shape>
