--- a/app/src/main/res/drawable/input_frame.xml
+++ b/app/src/main/res/drawable/input_frame.xml
@@ -10,7 +10,7 @@
                 />
            <stroke
                android:width="1dp"
-               android:color="@color/white"/>
+               android:color="@color/black"/>
             <corners
                 android:radius="15dp"/>
 
