--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
 
         <TextView
@@ -21,8 +20,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_margin="5dp"
-            android:textColor="@color/white"
             android:text="Forgot Password"
+            android:textColor="@color/white"
             android:textSize="18dp" />
 
         <TextView
@@ -31,28 +30,27 @@
             android:layout_alignParentBottom="true"
             android:layout_alignParentRight="true"
             android:layout_margin="5dp"
-            android:textColor="@color/white"
             android:text="Register"
+            android:textColor="@color/white"
             android:textSize="18dp" />
 
         <ImageView
             android:layout_width="100dp"
-            android:layout_height="150dp"
+            android:layout_height="100dp"
             android:layout_alignParentTop="true"
             android:layout_centerInParent="true"
             android:layout_margin="10dp"
-            android:src="@drawable/usericon" />
+            android:src="@drawable/usericon"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="110dp"
             android:text="Please Login "
+            android:textColor="@color/white"
             android:textSize="30dp"
-            android:textStyle="bold"
-
-            />
+            android:textStyle="bold"/>
 
 
     </RelativeLayout>
@@ -61,61 +59,41 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:gravity="center"
         android:orientation="vertical"
         android:padding="20dp">
 
-        <EditText
-
-            android:id="@+id/edtUsername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/input_frame"
-            android:gravity="center"
-            android:hint="Username"
-            android:padding="10dp"
-            android:textColor="@color/white" />
-
-
-        <EditText
-            android:id="@+id/edtPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/input_frame"
-            android:gravity="center"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:padding="10dp"
-            android:textColor="@color/white" />
 
         <Button
-            android:id="@+id/btnLogin"
+            android:id="@+id/btnLoginWithFacebook"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
-            android:background="@drawable/input_buttun"
-            android:text="Login"
+            android:background="@drawable/btn_facebook"
+            android:text="Login With Facebook"
+            android:textColor="@color/white"
+            android:textSize="18dp" />
+        <Button
+            android:id="@+id/btnLoginWithGoogle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:background="@drawable/btn_google"
+            android:text="Login With Gmail"
             android:textColor="@color/white"
             android:textSize="18dp" />
 
         <Button
-            android:id="@+id/btnNasa"
+            android:id="@+id/btnLoginWithEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/input_buttun"
-            android:text="Nasa"
+            android:text="Login With Email"
             android:textColor="@color/white"
             android:textSize="18dp" />
 
 
     </LinearLayout>
-
-
-
-
 </RelativeLayout>
